# ligttools

./: README.md  glottolog-codes.txt  pyproject.toml  test-data.ttl  test-mappings.ttl
.github/workflows/: publish.yml
ligttools/: cli.py
ligttools/converters/: base.py  cldf_converter.py  csv_converter.py  flex_converter.py  json_converter.py  toolbox_converter.py
tests/: test_cli.py  test_converters.py
